option for included bleed, crop mark customization and accuracy fixes, adds cname to gh-pages build

--- a/src/index.css
+++ b/src/index.css
@@ -55,4 +55,7 @@
     width: min-content;
     border: none;
   }
+  .paper {
+    page-break-after: always;
+  }
 }
